gitops/kustomize/sanitize/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sanitize
  annotations:
    argocd.argoproj.io/sync-wave: "0"
