gitops/kustomize/sanitize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sanitize
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/name: sanitize
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/name: sanitize
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
